# pharia-common-rs

./: .env.example  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-pls.yml  release-plz.yml  test.yml
src/: iam.rs  lib.rs  open_telemetry.rs
tests/cassettes/: asking_for_permissions.vcr.json  asking_for_permissions_as_service.vcr.json  authorize.vcr.json  invalid_user_token.vcr.json  invoke_check_user.vcr.json  valid_user_token.vcr.json  verify_predefined_permissions.vcr.json
