[package]
name = "pharia-common"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Common utilities for Rust services deployed as part of Pharia AI"
documentation = "https://docs.rs/pharia-common"
repository = "https://github.com/Aleph-Alpha/pharia-common-rs"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.47.1", features = ["macros", "test-util"] }
# We use reqwest-vcr middleware to record tests. This is not a dev dependency, because we want to
# expose this as a convinience to our users, too.
reqwest-vcr = "0.3.0"
