[package]
name = "pharia-common"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Common utilities for Rust services deployed as part of Pharia AI"
documentation = "https://docs.rs/pharia-common"
repository = "https://github.com/Aleph-Alpha/pharia-common-rs"

[dependencies]
# We use this for opaque errors caused by the runtime
anyhow = "1.0.99"
# Using native roots explicitly is desired. The default-tls assumes a Saas operation and that we
# could redeploy the containers in case we want certificates to change. Since we have a slightly
# less default on-premise buisness model, native-roots is for us.
reqwest = { version = "0.12.23", features = [
    "json",
    "rustls-tls-native-roots",
    "http2",
] }
# We are using reqwest middleware to inject VCR middleware for cassette recording and replaying in
# tests.
reqwest-middleware = { version = "0.4.2", features = [
    "rustls-tls",
    "json",
    "http2",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
# We use this for custom domain specific errors
thiserror = "2.0.16"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.47.1", features = ["macros", "test-util"] }
# We use reqwest-vcr middleware to record tests. This is not a dev dependency, because we want to
# expose this as a convinience to our users, too.
reqwest-vcr = "0.3.0"
